--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
 
 html {
 	font: normal 16px sans-serif;
-	color: #555;
+	color: #fff;
 }
 
 ul,
@@ -18,12 +18,7 @@ nav {
 
 a {
 	text-decoration: none;
-	opacity: 0.75;
-	color: #fff;
-}
-
-a:hover {
-	opacity: 1;
+	color: #333;
 }
 
 a.btn {
@@ -31,8 +26,8 @@ a.btn {
 	text-transform: uppercase;
 	font-weight: bold;
 	text-align: center;
-	background-color: #3f51b5;
-	opacity: 1;
+	background-color: rgb(0, 0, 0);
+	color: #fff;
 }
 
 section {
@@ -43,7 +38,7 @@ section {
 }
 
 section:not(.hero):nth-child(even) {
-	background-color: #f5f5f5;
+	background-color: #fff;
 }
 
 .grid {
@@ -85,19 +80,69 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 35px 100px 0;
-	animation: 1s fadein 0.5s forwards;
-	opacity: 0;
-	color: #fff;
+	color: #333;
 }
 
-@keyframes fadein {
+.reveal {
+	position: relative;
+	width: 7em;
+	margin: 0 auto;
+}
+
+.reveal span {
+	opacity: 0;
+	animation: reveal 0.0001s linear forwards;
+	animation-delay: 1.4s
+}
+
+.reveal:after {
+	content: "";
+	top: 0;
+	left: 0;
+	position: absolute;
+	width: 0%;
+	height: 100%;
+	background: #333;
+	animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+	animation-delay: 1s;
+}
+
+@keyframes revealing {
+0% {
+	left: 0;
+	width: 0%;
+}
+50% {
+	left: 0;
+	width: 100%
+}
+100% {
+	left: 100%;
+	width: 0%;
+}
+}
+
+@keyframes reveal {
+	0% {
+		opacity: 0;
+	}
 	100% {
 		opacity: 1;
 	}
 }
 
-header h2 {
-	font-family: "Quicksand", sans-serif;
+#revTwo {
+	width: 7.5em;
+	margin-bottom: 5rem;
+}
+
+#revTwo span {
+	animation-delay: 2s;
+}
+
+#revTwo.reveal:after {
+	background: #333;
+	animation-delay: 1.4s;
 }
 
 header nav {
@@ -116,7 +161,7 @@ header nav li {
 	justify-content: center;
 	text-align: center;
 	min-height: 100vh;
-	color: #fff;
+	color: #333;
 }
 
 .hero .background-image {
@@ -127,12 +172,11 @@ header nav li {
 	height: 100%;
 	background-size: cover;
 	z-index: -1;
-	background-color: #80a3db;
+	background-color: #fff;
 }
 
 .hero h1 {
 	font: bold 60px "Open Sans", sans-serif;
-	margin-bottom: 15px;
 }
 
 .hero h3 {
@@ -140,22 +184,25 @@ header nav li {
 	margin-bottom: 40px;
 }
 
-.hero a.btn {
-	padding: 20px 46px;
-}
-
 .hero-content-area {
-	opacity: 0;
-	margin-top: 100px;
-	animation: 1s slidefade 1s forwards;
+	width: 100%;
 }
 
-@keyframes slidefade {
-	100% {
-		opacity: 1;
-		margin: 0;
-	}
+.typer:before {
+		content: "\2014 ";
+		padding: 10px;
 }
+
+.typing {
+	opacity: 0;
+	animation: appear 0.8s ease-in forwards;
+	animation-delay: 2.6s;
+}
+
+@keyframes appear {
+	0%   { opacity: 0; }
+	100% { opacity: .9; }
+  }
 
 /*Destinations Section*/
 
@@ -294,9 +341,6 @@ footer p {
 	}
 	.hero h3{
 		font-size: 24px;
-	}
-	.hero a.btn {
-		padding:15px 40px;
 	}
 	.destinations .grid li.small,
 	.destinations .grid li.large {
