--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,24 +63,25 @@ section h3.title {
 	text-align: center;
 }
 
-section p {
-	max-width: 775px;
-	line-height: 2;
-	padding: 0 20px;
-	margin-bottom: 30px;
-	text-align: center;
-}
-
 /*Header Styles*/
 
-header {
+.header-home {
 	position: absolute;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 35px 100px 0;
+	padding: 40px;
 	color: #333;
+}
+
+.header-logo {
+	display: inline-block;
+	width: 50px;
+}
+
+.logo img {
+	width: 100%;
 }
 
 .reveal {
@@ -88,6 +89,52 @@ header {
 	width: 7em;
 	margin: 0 auto;
 }
+
+.header-icons {
+	width: 100%;
+	height: 2rem;
+	padding: 3rem 0;
+	display: block;
+}
+
+.menu-icon {
+	width: 2.5rem;
+	height: 1.5rem;
+	display: inline-block;
+	cursor: pointer;
+  }
+  
+  .header__item {
+	display: block;
+	margin-top: 2rem;
+	float: right;
+	padding-left: 8px;
+  }
+  
+  .menu-icon__line {
+	width: 1.6rem;
+	height: .16rem;
+	background: black;
+	display: block;
+	padding-left: 10px
+  }
+  
+  .menu-icon__line:before, .menu-icon__line:after {
+	content: '';
+	width: 1.6rem;
+	height: .17rem;
+	background: black;
+	display: block;
+	position: relative;
+  }
+  
+  .menu-icon__line:before {
+	top: .7rem;
+  }
+  
+  .menu-icon__line:after {
+	top: -.8rem;
+  }
 
 .reveal span {
 	opacity: 0;
@@ -155,6 +202,24 @@ header nav li {
 }
 
 /*Hero Styles*/
+
+.welcome {
+	font-size: 14px;
+display: block;
+float: left;
+position: absolute;
+top: 50%;
+color: #9ea0a6;
+letter-spacing: .2rem;
+left: -60px;
+margin: 0;
+transform: rotate(-90deg) translateY(50%);
+}
+
+.welcome:before, .welcome:after { 
+	content:"\2014";
+	margin: 0 20px;
+}
 
 .hero {
 	position: relative;
