--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,50 +87,121 @@ section h3.title {
 	margin: 0 auto;
 }
 
-.header-icons {
-	width: 100%;
-	height: 2rem;
-	padding: 3rem 0;
-	display: block;
-}
+/* ------------------Menu --------------*/
 
 .menu-icon {
-	width: 2.5rem;
-	height: 1.5rem;
-	display: inline-block;
-	cursor: pointer;
-}
+  height: 70px;
+  width: 70px;
+  right: 70px;
+  top: 20px;
+  text-align: center;
+  position: absolute;
 
-.header__item {
-	display: block;
-	margin-top: 24px;
-	float: right;
+  overflow: hidden;
+  transition: all 0.2s ease;
+  z-index: 999;
 }
-
-.menu-icon__line {
-	width: 1.6rem;
-	height: .16rem;
-	background: black;
-	display: block;
-	padding-left: 10px
+.menu-icon.active {
+  width: calc(100% - 140px);
 }
-
-.menu-icon__line:before,
-.menu-icon__line:after {
-	content: '';
-	width: 1.6rem;
-	height: .17rem;
-	background: black;
-	display: block;
-	position: relative;
+.menu-icon.active .menu-icon__content * {
+  opacity: 1;
 }
-
-.menu-icon__line:before {
-	top: .7rem;
+.menu-icon.active span i:nth-child(1) {
+  transform: rotate(-45deg) translate(-50%, -50%);
+  top: 50%;
 }
-
-.menu-icon__line:after {
-	top: -.8rem;
+.menu-icon.active span i:nth-child(2) {
+  transform: translateX(-100px);
+  opacity: 0;
+}
+.menu-icon.active span i:nth-child(3) {
+  transform: rotate(45deg) translate(-50%, -50%);
+  top: 50%;
+}
+.menu-icon span {
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  background: #fff;
+  z-index: 1;
+}
+.menu-icon span i {
+  position: absolute;
+  transform-origin: 50% 50%;
+  width: 45%;
+  height: 2px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #ccc;
+  transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
+}
+.menu-icon span i:nth-child(1) {
+  top: 40%;
+}
+.menu-icon span i:nth-child(2) {
+  top: 50%;
+}
+.menu-icon span i:nth-child(3) {
+  top: 60%;
+}
+.menu-icon .menu-icon__content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 40px;
+	right: 0px;
+	top: 17px;
+  text-align: center;
+}
+.menu-icon .menu-icon__content * {
+  opacity: 0;
+}
+.menu-icon .menu-icon__content ul li {
+  display: inline-block;
+  margin-left: 50px;
+  margin-right: 50px;
+  color: #2d3235;
+  transition: opacity 0.3s ease 0.3s;
+  cursor: pointer;
+  position: relative;
+}
+.menu-icon .menu-icon__content ul li:hover:before {
+  opacity: 0.8;
+  top: 13px;
+  left: 20px;
+}
+.menu-icon .menu-icon__content ul li:hover:after {
+  opacity: 0.8;
+  bottom: 13px;
+  left: -20px;
+}
+.menu-icon .menu-icon__content ul li:before, .menu-icon .menu-icon__content ul li:after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  background: #ccc;
+  transition: all 0.3s ease;
+}
+.menu-icon .menu-icon__content ul li:before {
+  transform: rotate(-55deg);
+  left: 60px;
+  top: -30px;
+  opacity: 0;
+  right: 0;
+  margin: auto;
+}
+.menu-icon .menu-icon__content ul li:after {
+  transform: rotate(-55deg);
+  left: -60px;
+  bottom: -30px;
+  opacity: 0;
+  right: 0;
+  margin: auto;
 }
 
 .reveal span {
