--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
-/*General Styles*/
+/* #################
+    General Styles
+   ################# */
 
 * {
 	margin: 0;
@@ -63,7 +65,9 @@ section h3.title {
 	text-align: center;
 }
 
-/*Header Styles*/
+/* #################
+    Header Styles
+   ################# */
 
 .header-home {
 	position: absolute;
@@ -81,127 +85,161 @@ section h3.title {
 	width: 100%;
 }
 
+header nav {
+	display: flex;
+	margin-right: -15px;
+}
+
+header nav li {
+	margin: 0 15px;
+}
+
+/* #################
+    Menu Styles
+   ################# */
+
+.menu-icon {
+	height: 70px;
+	width: 70px;
+	right: 70px;
+	top: 20px;
+	text-align: center;
+	position: absolute;
+
+	overflow: hidden;
+	transition: all 0.2s ease;
+	z-index: 999;
+}
+
+.menu-icon.active {
+	width: calc(100% - 140px);
+}
+
+.menu-icon.active .menu-icon__content * {
+	opacity: 1;
+}
+
+.menu-icon.active span i:nth-child(1) {
+	transform: rotate(-45deg) translate(-50%, -50%);
+	top: 50%;
+}
+
+.menu-icon.active span i:nth-child(2) {
+	transform: translateX(-100px);
+	opacity: 0;
+}
+
+.menu-icon.active span i:nth-child(3) {
+	transform: rotate(45deg) translate(-50%, -50%);
+	top: 50%;
+}
+
+.menu-icon span {
+	width: 70px;
+	height: 70px;
+	position: absolute;
+	right: 0;
+	cursor: pointer;
+	background: #fff;
+	z-index: 1;
+}
+
+.menu-icon span i {
+	position: absolute;
+	transform-origin: 50% 50%;
+	width: 45%;
+	height: 2px;
+	left: 0;
+	right: 0;
+	margin: auto;
+	background-color: #ccc;
+	transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
+}
+
+.menu-icon span i:nth-child(1) {
+	top: 40%;
+}
+
+.menu-icon span i:nth-child(2) {
+	top: 50%;
+}
+
+.menu-icon span i:nth-child(3) {
+	top: 60%;
+}
+
+.menu-icon .menu-icon__content {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	line-height: 40px;
+	right: 0px;
+	top: 17px;
+	text-align: center;
+}
+
+.menu-icon .menu-icon__content * {
+	opacity: 0;
+}
+
+.menu-icon .menu-icon__content ul li {
+	display: inline-block;
+	margin-left: 50px;
+	margin-right: 50px;
+	color: #2d3235;
+	transition: opacity 0.3s ease 0.3s;
+	cursor: pointer;
+	position: relative;
+}
+
+.menu-icon .menu-icon__content ul li:hover:before {
+	opacity: 0.8;
+	top: 13px;
+	left: 20px;
+}
+
+.menu-icon .menu-icon__content ul li:hover:after {
+	opacity: 0.8;
+	bottom: 13px;
+	left: -20px;
+}
+
+.menu-icon .menu-icon__content ul li:before,
+.menu-icon .menu-icon__content ul li:after {
+	content: "";
+	position: absolute;
+	width: 20px;
+	height: 2px;
+	background: #ccc;
+	transition: all 0.3s ease;
+}
+
+.menu-icon .menu-icon__content ul li:before {
+	transform: rotate(-55deg);
+	left: 60px;
+	top: -30px;
+	opacity: 0;
+	right: 0;
+	margin: auto;
+}
+
+.menu-icon .menu-icon__content ul li:after {
+	transform: rotate(-55deg);
+	left: -60px;
+	bottom: -30px;
+	opacity: 0;
+	right: 0;
+	margin: auto;
+}
+
+/* #################
+    Title Slide
+   ################# */
+
 .reveal {
 	position: relative;
 	width: 7em;
 	margin: 0 auto;
-}
-
-/* ------------------Menu --------------*/
-
-.menu-icon {
-  height: 70px;
-  width: 70px;
-  right: 70px;
-  top: 20px;
-  text-align: center;
-  position: absolute;
-
-  overflow: hidden;
-  transition: all 0.2s ease;
-  z-index: 999;
-}
-.menu-icon.active {
-  width: calc(100% - 140px);
-}
-.menu-icon.active .menu-icon__content * {
-  opacity: 1;
-}
-.menu-icon.active span i:nth-child(1) {
-  transform: rotate(-45deg) translate(-50%, -50%);
-  top: 50%;
-}
-.menu-icon.active span i:nth-child(2) {
-  transform: translateX(-100px);
-  opacity: 0;
-}
-.menu-icon.active span i:nth-child(3) {
-  transform: rotate(45deg) translate(-50%, -50%);
-  top: 50%;
-}
-.menu-icon span {
-  width: 70px;
-  height: 70px;
-  position: absolute;
-  right: 0;
-  cursor: pointer;
-  background: #fff;
-  z-index: 1;
-}
-.menu-icon span i {
-  position: absolute;
-  transform-origin: 50% 50%;
-  width: 45%;
-  height: 2px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  background-color: #ccc;
-  transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
-}
-.menu-icon span i:nth-child(1) {
-  top: 40%;
-}
-.menu-icon span i:nth-child(2) {
-  top: 50%;
-}
-.menu-icon span i:nth-child(3) {
-  top: 60%;
-}
-.menu-icon .menu-icon__content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  line-height: 40px;
-	right: 0px;
-	top: 17px;
-  text-align: center;
-}
-.menu-icon .menu-icon__content * {
-  opacity: 0;
-}
-.menu-icon .menu-icon__content ul li {
-  display: inline-block;
-  margin-left: 50px;
-  margin-right: 50px;
-  color: #2d3235;
-  transition: opacity 0.3s ease 0.3s;
-  cursor: pointer;
-  position: relative;
-}
-.menu-icon .menu-icon__content ul li:hover:before {
-  opacity: 0.8;
-  top: 13px;
-  left: 20px;
-}
-.menu-icon .menu-icon__content ul li:hover:after {
-  opacity: 0.8;
-  bottom: 13px;
-  left: -20px;
-}
-.menu-icon .menu-icon__content ul li:before, .menu-icon .menu-icon__content ul li:after {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 2px;
-  background: #ccc;
-  transition: all 0.3s ease;
-}
-.menu-icon .menu-icon__content ul li:before {
-  transform: rotate(-55deg);
-  left: 60px;
-  top: -30px;
-  opacity: 0;
-  right: 0;
-  margin: auto;
-}
-.menu-icon .menu-icon__content ul li:after {
-  transform: rotate(-55deg);
-  left: -60px;
-  bottom: -30px;
-  opacity: 0;
-  right: 0;
-  margin: auto;
 }
 
 .reveal span {
@@ -220,6 +258,20 @@ section h3.title {
 	background: #333;
 	animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
 	animation-delay: 1s;
+}
+
+#revTwo {
+	width: 7.5em;
+	margin-bottom: 5rem;
+}
+
+#revTwo span {
+	animation-delay: 2s;
+}
+
+#revTwo.reveal:after {
+	background: #333;
+	animation-delay: 1.4s;
 }
 
 @keyframes revealing {
@@ -249,44 +301,9 @@ section h3.title {
 	}
 }
 
-#revTwo {
-	width: 7.5em;
-	margin-bottom: 5rem;
-}
-
-#revTwo span {
-	animation-delay: 2s;
-}
-
-#revTwo.reveal:after {
-	background: #333;
-	animation-delay: 1.4s;
-}
-
-header nav {
-	display: flex;
-	margin-right: -15px;
-}
-
-header nav li {
-	margin: 0 15px;
-}
-
-/*Hero Styles*/
-
-.side__bar {
-	transform: rotate(90deg);
-	text-transform: uppercase;
-	letter-spacing: 3px;
-	font-size: 0.8em;
-	margin: 0 auto;
-	position: absolute;
-	left: -20px;
-	top: 50%;
-	width: 140px;
-	color: #9ea0a6;
-	opacity: 0.6;
-}
+/* #################
+    Hero Styles
+   ################# */
 
 .hero {
 	position: relative;
@@ -320,6 +337,28 @@ header nav li {
 	width: 100%;
 }
 
+/* #################
+    Side Bar Styles
+   ################# */
+
+.side__bar {
+	transform: rotate(90deg);
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-size: 0.8em;
+	margin: 0 auto;
+	position: absolute;
+	left: -20px;
+	top: 50%;
+	width: 140px;
+	color: #9ea0a6;
+	opacity: 0.6;
+}
+
+/* #################
+    Typing Styles
+   ################# */
+
 .typer:before {
 	content: "\2014 ";
 	padding: 10px;
@@ -341,7 +380,9 @@ header nav li {
 	}
 }
 
-/*Destinations Section*/
+/* #################
+    Works Styles
+   ################# */
 
 .destinations .grid li {
 	height: 350px;
