--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,239 +90,244 @@ section h3.title {
 /* ------------------Menu --------------*/
 
 .nav-icon {
-  width: 2rem;
+	width: 2rem;
 	height: 1.2rem;
 	top: 2.5rem;
 	right: 2rem;
-  position: absolute;
-  transition: .5s ease-in-out;
-  cursor: pointer;
+	position: absolute;
+	transition: .5s ease-in-out;
+	cursor: pointer;
 	margin-top: 7px;
 	z-index: 5;
 }
 
 .nav-icon span {
-  display: block;
-  position: absolute;
-  height: 2px;
-  width: 100%;
-  background: rgb(0, 0, 0);
-  opacity: 1;
-  transition: .25s ease-in-out;
+	display: block;
+	position: absolute;
+	height: 2px;
+	width: 100%;
+	background: rgb(0, 0, 0);
+	opacity: 1;
+	transition: .25s ease-in-out;
 }
 
 .nav-icon span:nth-child(1) {
-  top: 0rem;
+	top: 0rem;
 }
 
 .nav-icon span:nth-child(2) {
-  top: .5rem;
+	top: .5rem;
 }
 
 .nav-icon span:nth-child(3) {
-  top: 1rem;
-  width: 60%;
-  right: 0;
+	top: 1rem;
+	width: 60%;
+	right: 0;
 }
 
 .nav-icon:hover span:nth-child(3) {
-  width: 100%;
+	width: 100%;
 }
 
 
 /*------------------------ 2.1 Full Menu ------------------------*/
 
 .full-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  background-size: cover;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	background-size: cover;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.3s 0s, visibility 0s 0.3s;
 }
 
 /* Full Menu */
 
 .full-menu .modal-close {
-  /* 'X' icon */
-  position: absolute;
-  z-index: 15;
-  top: 0;
-  right: 0;
-  padding: 50px;
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  background:rgba(0, 0, 0, 0.3) url(/cd-icon-close.svg)no-repeat center center;
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-  visibility: hidden;
-  opacity: 0;
-  transform: scale(0);
-  visibility 0s 0.3s, opacity 0.3s 0s;
-  transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
+	/* 'X' icon */
+	position: absolute;
+	z-index: 15;
+	top: 0;
+	right: 0;
+	padding: 50px;
+	height: 45px;
+	width: 45px;
+	border-radius: 50%;
+	background: rgba(0, 0, 0, 0.3) url(cd-icon-close.svg)no-repeat center center;
+	overflow: hidden;
+	text-indent: 100%;
+	white-space: nowrap;
+	visibility: hidden;
+	opacity: 0;
+	transform: scale(0);
+	visibility 0s 0.3s,
+	opacity 0.3s 0s;
+	transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
 }
 
 .no-touch .full-menu .modal-close:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .full-menu.visible {
-  background-size: 100%;
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 0.7s, visibility 0s;
+	background-size: 100%;
+	opacity: 1;
+	visibility: visible;
+	transition: opacity 0.7s, visibility 0s;
 }
 
 .full-menu.visible .fullmenu-content {
-  -webkit-overflow-scrolling: touch;
+	-webkit-overflow-scrolling: touch;
 }
 
 .full-menu.visible .modal-close {
-  visibility: visible;
-  opacity: 1;
-  transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-  transform: scale(1);
+	visibility: visible;
+	opacity: 1;
+	transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+	transform: scale(1);
 }
 
 @media only screen and (min-width: 1100px) {
-  .full-menu .fullmenu-content {
-      padding: 6em 5%;
-  }
-  .full-menu .modal-close {
-      height: 60px;
-      width: 60px;
-  }
-  .full-menu p {
-      font-size: 25px;
-  }
+	.full-menu .fullmenu-content {
+		padding: 6em 5%;
+	}
+
+	.full-menu .modal-close {
+		height: 60px;
+		width: 60px;
+	}
+
+	.full-menu p {
+		font-size: 25px;
+	}
 }
 
 .cd-transition-layer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	visibility: hidden;
+	overflow: hidden;
 }
 
 .cd-transition-layer .bg-layer {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translateY(-50%) translateX(-2%);
-  transform: translateY(-50%) translateX(-2%);
-  height: 100%;
-  /* our sprite is composed of 25 frames */
-  width: 2500%;
-  background: url(/ink.png) no-repeat 0 0;
-  background-size: 100% 100%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translateY(-50%) translateX(-2%);
+	transform: translateY(-50%) translateX(-2%);
+	height: 100%;
+	/* our sprite is composed of 25 frames */
+	width: 2500%;
+	background: url(ink.png) no-repeat 0 0;
+	background-size: 100% 100%;
 }
 
 .cd-transition-layer.visible {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
 
 .cd-transition-layer.opening .bg-layer {
-  animation: cd-sequence 1.0s steps(24);
-  animation-fill-mode: forwards;
+	animation: cd-sequence 1.0s steps(24);
+	animation-fill-mode: forwards;
 }
 
 .cd-transition-layer.closing .bg-layer {
-  animation: cd-sequence-reverse 1.0s steps(24);
-  animation-fill-mode: forwards;
+	animation: cd-sequence-reverse 1.0s steps(24);
+	animation-fill-mode: forwards;
 }
 
 .no-cssanimations .cd-transition-layer {
-  display: none;
+	display: none;
 }
 
 
 @keyframes cd-sequence {
-  0% {
-      transform: translateY(-50%) translateX(-2%);
-  }
-  100% {
-      transform: translateY(-50%) translateX(-98%);
-  }
+	0% {
+		transform: translateY(-50%) translateX(-2%);
+	}
+
+	100% {
+		transform: translateY(-50%) translateX(-98%);
+	}
 }
 
 
 
 
 @keyframes cd-sequence-reverse {
-  0% {
+	0% {
 
-      transform: translateY(-50%) translateX(-98%);
-  }
-  100% {
+		transform: translateY(-50%) translateX(-98%);
+	}
 
-      transform: translateY(-50%) translateX(-2%);
-  }
+	100% {
+
+		transform: translateY(-50%) translateX(-2%);
+	}
 }
 
 
 /*------------------------ 2.2 Header ------------------------*/
 
 .full-menu .fullmenu-content {
-  height: 100%;
-  width: 100%;
-  display: table;
+	height: 100%;
+	width: 100%;
+	display: table;
 }
 
 .page-menu {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
 }
 
 .page-menu li {
-  line-height: 50px;
-  margin-left: -25px;
+	line-height: 50px;
+	margin-left: -25px;
 }
 
 .page-menu li:last-child {
-  line-height: 90px;
+	line-height: 90px;
 }
 
 .page-menu li a {
-  color: rgb(255, 255, 255);
-  font-size: 26px;
-  position: relative;
-  font-weight: 500;
+	color: rgb(255, 255, 255);
+	font-size: 26px;
+	position: relative;
+	font-weight: 500;
 
 }
 
 .social img {
-  width: 15px;
+	width: 15px;
 }
 
 .main .social {
-  margin-top: 30px;
+	margin-top: 30px;
 }
 
 .social a {
-  margin-right: 20px;
+	margin-right: 20px;
 }
 
 .social a:hover img {
-  opacity: .6;
-  transition: all ease 0.3s;
+	opacity: .6;
+	transition: all ease 0.3s;
 }
 
 .social a:last-child {
-  margin-right: 0px;
+	margin-right: 0px;
 }
 
 
