--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@ section:not(.hero):nth-child(even) {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	color: #333;
 }
 
 hr {
@@ -63,6 +64,25 @@ section h3.title {
 	text-align: center;
 }
 
+
+/* -------------------Screen Wipe-------------------------- */
+
+.screen-wipe-top{
+	width: 100%;
+	height: 100vh;
+	background:#666;
+	position: fixed;
+	z-index: 1000;
+	top: -100%;
+}
+.screen-wipe-bottom{
+	width: 100%;
+	height: 100vh;
+	background:#666;
+	position: fixed;
+	z-index: 1000;
+	bottom: -100%;
+}
 /*Header Styles*/
 
 .header-home {
