added side nav to work section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -618,6 +618,30 @@ header nav li {
 	clear: both;
 }
 
+.side-nav {
+	position: absolute;
+	width: 10%;
+	height: 100%;
+	top: 0;
+	z-index: 20;
+	cursor: pointer;
+	opacity: 0;
+	transition: 300ms;
+
+}
+.side-nav:hover {
+	opacity: .5;
+}
+
+.side-nav--right {
+	right: 0;
+	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 100%);
+}
+.side-nav--left {
+	left: 0;
+	background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 100%);
+}
+
 /*Packages Section*/
 
 .packages .grid li {
