--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -599,47 +599,205 @@ header nav li {
 }
 
 /*works Section*/
-
-.work_img{
-	height: 100Vh;
-	float: left;
+img {
+  max-width: 100%;
+}
+#app {
+  width: 90%;
+  height: 85%;
+  overflow: hidden;
+}
+.ui-big-images {
+  position: absolute;
+  height: 70%;
 	width: 50%;
+	left: 15%;
+
+
+  display: flex;
+}
+.ui-big-image {
+  width: 100%;
+  margin-right: -100%;
+}
+.ui-big-image img {
+  object-fit: cover;
+  object-position: center 20%;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+@media (max-height: 600px) {
+  .ui-big-image img {
+    object-position: center center;
+  }
+}
+.ui-thumbnails {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 1rem;
+  padding-top: 0.5rem;
+  padding-right: 45%;
+  padding-right: calc(45% + .5rem);
+}
+.ui-thumbnail {
+  display: block;
+  margin-right: 0.5rem;
+  padding: 0.5rem 0;
+  cursor: pointer;
+}
+.ui-cuticle {
+  background-color: #d4a12d;
+  position: absolute;
+  bottom: 0;
+  height: 0.25rem;
+  width: 100%;
+}
+.ui-thumbnail > img {
+  width: auto;
+}
+.ui-content {
+  position: absolute;
+  width: 40%;
+  right: 5%;
+  bottom: 0;
+}
+.ui-articles {
+  background: #493e56;
+  color: white;
+  display: flex;
+  align-items: stretch;
+  overflow: hidden;
+}
+.ui-article {
+  padding: 1.5rem;
+  width: 100%;
+  margin-right: -100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.ui-paragraph {
+  margin: 0;
+  font-size: 0.7rem;
+  line-height: 1.7;
+}
+.ui-nav {
+  position: absolute;
+  right: 0;
+  bottom: 100%;
+  background: inherit;
+}
+.ui-nav button {
+  background: #493e56;
+  border: none;
+  appearance: none;
+  padding: 0.5em;
+  width: 2em;
+  color: #fff;
+  font-family: monospace;
+  transition: inherit;
+  transition-duration: 300ms;
+}
+.ui-nav button:hover, .ui-nav button:focus {
+  background: #d4a12d;
+  outline: none;
+}
+.ui-nav button:active {
+  outline: none;
+  transform: translateY(0.25em);
+  transition-duration: 100ms;
+}
+.ui-heading {
+  margin: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: normal;
+}
+.ui-heading:before {
+  content: 'Animator';
+  font-size: 0.5rem;
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: 0.5rem;
+  letter-spacing: 1px;
+}
+/* ---------------------------------- */
+.ui-big-image {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+.ui-big-image img {
+  transform: scale(0.85);
+}
+.ui-big-image[data-active] ~ .ui-big-image {
+  transform: translateX(100%);
+}
+.ui-big-image[data-active] {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.ui-big-image[data-active] img {
+  transform: scale(1);
+}
+/* ---------------------------------- */
+.ui-article {
+  transform: translateX(-100%);
+}
+.ui-article:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #d4a12d;
+  opacity: 1;
+  transition-duration: 0.35s;
+  z-index: 1;
+}
+.ui-article[data-active] ~ .ui-article {
+  transform: translateX(100%);
+}
+.ui-article[data-active] {
+  transform: translateX(0%);
+}
+.ui-article[data-active]:before {
+  opacity: 0;
+}
+/* ---------------------------------- */
+.ui-thumbnail > img {
+  filter: grayscale(100%);
+  transition-duration: 0.35s;
+}
+.ui-thumbnail:active > img {
+  transform: scale(0.9);
+  transition-duration: 100ms;
+}
+.ui-thumbnail:focus {
+  outline: none;
+}
+.ui-cuticle {
+  display: none;
+}
+.ui-thumbnail[data-active] > img, .ui-thumbnail:hover > img {
+  filter: grayscale(0%);
+}
+.ui-thumbnail[data-active] .ui-cuticle {
+  display: block;
 }
 
-.work_text {
-	color: #333;
-	float: right;
-	margin: 2rem 2rem;
-}
-
-.row:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-.side-nav {
-	position: absolute;
-	width: 10%;
-	height: 100%;
-	top: 0;
-	z-index: 20;
-	cursor: pointer;
-	opacity: 0;
-	transition: 300ms;
-
-}
-.side-nav:hover {
-	opacity: .5;
-}
-
-.side-nav--right {
-	right: 0;
-	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 100%);
-}
-.side-nav--left {
-	left: 0;
-	background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 100%);
+*{
+  transition-property: transform, opacity, filter;
+  transition-duration: 0.7s, 0.7s, 0.7s;
+  transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
 }
 
 /*Packages Section*/
