--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -350,7 +350,7 @@ section h2.title {
 
 .kreative {
 	position: relative;
-	margin: -1em 0 1em 0;
+	margin: -0.5em 0 1em 0;
 	text-transform: uppercase;
 	letter-spacing: 3rem;
 	font-size: 7rem;
@@ -523,57 +523,69 @@ header nav li {
 
 .main_button {
 	align-items: center;
-	background-color: none;
+	margin-top: 5%;
 	display: flex;
 	height: 200px;
+	width: 100%;
 	justify-content: center;
-	margin: 0;
 	padding: 0;
-	transition: background-color 4s cubic-bezier(0.19, 1, 0.22, 1);
+	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .button {
-	border: 1px solid #333333b5;
-	cursor: pointer;
-	letter-spacing: 0.13rem;
-	overflow: hidden;
-	padding: 16px 20px 16px 20px;
+	padding: 2px 12px 2px 12px;
+	margin: 5%;
 	position: relative;
 	text-align: center;
 	text-transform: uppercase;
-	transition:
-		background 5s cubic-bezier(0.19, 1, 0.22, 1),
-		border 1s cubic-bezier(0.19, 1, 0.22, 1),
-		color 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+	color: #fff;
+	cursor: pointer;
+	display: block;
+	position: relative;
+	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+	letter-spacing: 0.13rem;
+	overflow: hidden;
 	user-select: none;
+}
+
+.button:hover {
+	color: #000 !important;
+	background-color: transparent;
+}
+
+.button:hover:before {
+	left: 0%;
+	right: auto;
+	width: 100%;
+}
+
+.button:before {
+	display: block;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	height: 100%;
+	width: 0px;
+	z-index: -1;
+	content: '';
+	background: #ebebeb;
+	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .button a {
 	color: #333;
+	font-size: 1.3rem;
 	font-family: "Varela Round";
 	text-decoration: none;
 }
 
-.button .mask {
-	background-color: #333;
-	background-color: #333;
-	height: 100px;
-	position: absolute;
-	transform: translate3d(-110%, -50px, 0) rotate3d(0, 0, 0, 0deg);
-	transition: all 3s cubic-bezier(0.19, 1, 0.22, 1);
-	width: 200px;
-}
-
 .button .shift {
 	display: inline-block;
-	transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
 	vertical-align: text-bottom;
 }
 
 .button:hover {
-	background-color: rgba(219, 219, 219, 0.212);
-	border-color: #fff;
-	box-shadow: 0 0 5px rgba(255, 245, 245, 0.8);
 	transition: background 0s;
 }
 
@@ -581,226 +593,250 @@ header nav li {
 	color: #333;
 }
 
-.button:hover .mask {
-	background-color: #fff;
-	transform: translate3d(105%, -50px, 0) rotate3d(0, 0, 0, 0deg);
-}
-
 .button:hover .shift {
 	transform: translateX(6px);
 }
 
-.button:active {
-	background-color: #fff;
-}
-
-.button:active a {
-	color: #333;
-}
-
 /*works Section*/
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
+
 #app {
-  width: 90%;
-  height: 85%;
-  overflow: hidden;
+	width: 90%;
+	height: 85%;
+	overflow: hidden;
 }
+
 .ui-big-images {
-  position: absolute;
-  height: 70%;
+	position: absolute;
+	height: 70%;
 	width: 50%;
 	left: 15%;
 
 
-  display: flex;
+	display: flex;
 }
+
 .ui-big-image {
-  width: 100%;
-  margin-right: -100%;
+	width: 100%;
+	margin-right: -100%;
 }
+
 .ui-big-image img {
-  object-fit: cover;
-  object-position: center 20%;
-  width: 100%;
-  height: 100%;
-  display: block;
+	object-fit: cover;
+	object-position: center 20%;
+	width: 100%;
+	height: 100%;
+	display: block;
 }
+
 @media (max-height: 600px) {
-  .ui-big-image img {
-    object-position: center center;
-  }
+	.ui-big-image img {
+		object-position: center center;
+	}
 }
+
 .ui-thumbnails {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 0 1rem;
-  padding-top: 0.5rem;
-  padding-right: 45%;
-  padding-right: calc(45% + .5rem);
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	background-color: #fff;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 0 1rem;
+	padding-top: 0.5rem;
+	padding-right: 45%;
+	padding-right: calc(45% + .5rem);
 }
+
 .ui-thumbnail {
-  display: block;
-  margin-right: 0.5rem;
-  padding: 0.5rem 0;
-  cursor: pointer;
+	display: block;
+	margin-right: 0.5rem;
+	padding: 0.5rem 0;
+	cursor: pointer;
 }
+
 .ui-cuticle {
-  background-color: #d4a12d;
-  position: absolute;
-  bottom: 0;
-  height: 0.25rem;
-  width: 100%;
+	background-color: #d4a12d;
+	position: absolute;
+	bottom: 0;
+	height: 0.25rem;
+	width: 100%;
 }
-.ui-thumbnail > img {
-  width: auto;
+
+.ui-thumbnail>img {
+	width: auto;
 }
+
 .ui-content {
-  position: absolute;
-  width: 40%;
-  right: 5%;
-  bottom: 0;
+	position: absolute;
+	width: 40%;
+	right: 5%;
+	bottom: 0;
 }
+
 .ui-articles {
-  background: #493e56;
-  color: white;
-  display: flex;
-  align-items: stretch;
-  overflow: hidden;
+	background: #493e56;
+	color: white;
+	display: flex;
+	align-items: stretch;
+	overflow: hidden;
 }
+
 .ui-article {
-  padding: 1.5rem;
-  width: 100%;
-  margin-right: -100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	padding: 1.5rem;
+	width: 100%;
+	margin-right: -100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
+
 .ui-paragraph {
-  margin: 0;
-  font-size: 0.7rem;
-  line-height: 1.7;
+	margin: 0;
+	font-size: 0.7rem;
+	line-height: 1.7;
 }
+
 .ui-nav {
-  position: absolute;
-  right: 0;
-  bottom: 100%;
-  background: inherit;
+	position: absolute;
+	right: 0;
+	bottom: 100%;
+	background: inherit;
 }
+
 .ui-nav button {
-  background: #493e56;
-  border: none;
-  appearance: none;
-  padding: 0.5em;
-  width: 2em;
-  color: #fff;
-  font-family: monospace;
-  transition: inherit;
-  transition-duration: 300ms;
+	background: #493e56;
+	border: none;
+	appearance: none;
+	padding: 0.5em;
+	width: 2em;
+	color: #fff;
+	font-family: monospace;
+	transition: inherit;
+	transition-duration: 300ms;
 }
-.ui-nav button:hover, .ui-nav button:focus {
-  background: #d4a12d;
-  outline: none;
+
+.ui-nav button:hover,
+.ui-nav button:focus {
+	background: #d4a12d;
+	outline: none;
 }
+
 .ui-nav button:active {
-  outline: none;
-  transform: translateY(0.25em);
-  transition-duration: 100ms;
+	outline: none;
+	transform: translateY(0.25em);
+	transition-duration: 100ms;
 }
+
 .ui-heading {
-  margin: 0;
-  margin-bottom: 0.5rem;
-  font-size: 1rem;
-  font-weight: normal;
+	margin: 0;
+	margin-bottom: 0.5rem;
+	font-size: 1rem;
+	font-weight: normal;
 }
+
 .ui-heading:before {
-  content: 'Animator';
-  font-size: 0.5rem;
-  text-transform: uppercase;
-  display: block;
-  margin-bottom: 0.5rem;
-  letter-spacing: 1px;
+	content: 'Animator';
+	font-size: 0.5rem;
+	text-transform: uppercase;
+	display: block;
+	margin-bottom: 0.5rem;
+	letter-spacing: 1px;
 }
+
 /* ---------------------------------- */
 .ui-big-image {
 	opacity: 0;
 	transition-property: transform, opacity, filter;
-  transition-duration: 0.7s, 0.7s, 0.7s;
-  transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
-  transform: translateX(-100%);
+	transition-duration: 0.7s, 0.7s, 0.7s;
+	transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
+	transform: translateX(-100%);
 }
+
 .ui-big-image img {
 	transform: scale(0.85);
 	transition-property: transform, opacity, filter;
-  transition-duration: 0.7s, 0.7s, 0.7s;
-  transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
+	transition-duration: 0.7s, 0.7s, 0.7s;
+	transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
 }
-.ui-big-image[data-active] ~ .ui-big-image {
-  transform: translateX(100%);
+
+.ui-big-image[data-active]~.ui-big-image {
+	transform: translateX(100%);
 }
+
 .ui-big-image[data-active] {
-  opacity: 1;
-  transform: translateX(0%);
+	opacity: 1;
+	transform: translateX(0%);
 }
+
 .ui-big-image[data-active] img {
-  transform: scale(1);
+	transform: scale(1);
 }
+
 /* ---------------------------------- */
 .ui-article {
 	transition-property: transform, opacity, filter;
-  transition-duration: 0.7s, 0.7s, 0.7s;
-  transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
-  transform: translateX(-100%);
+	transition-duration: 0.7s, 0.7s, 0.7s;
+	transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
+	transform: translateX(-100%);
 }
+
 .ui-article:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #d4a12d;
-  opacity: 1;
-  transition-duration: 0.35s;
-  z-index: 1;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #d4a12d;
+	opacity: 1;
+	transition-duration: 0.35s;
+	z-index: 1;
 }
-.ui-article[data-active] ~ .ui-article {
-  transform: translateX(100%);
+
+.ui-article[data-active]~.ui-article {
+	transform: translateX(100%);
 }
+
 .ui-article[data-active] {
-  transform: translateX(0%);
+	transform: translateX(0%);
 }
+
 .ui-article[data-active]:before {
-  opacity: 0;
+	opacity: 0;
 }
+
 /* ---------------------------------- */
-.ui-thumbnail > img {
-  filter: grayscale(100%);
-  transition-duration: 0.35s;
+.ui-thumbnail>img {
+	filter: grayscale(100%);
+	transition-duration: 0.35s;
 }
-.ui-thumbnail:active > img {
-  transform: scale(0.9);
-  transition-duration: 100ms;
+
+.ui-thumbnail:active>img {
+	transform: scale(0.9);
+	transition-duration: 100ms;
 }
+
 .ui-thumbnail:focus {
-  outline: none;
+	outline: none;
 }
+
 .ui-cuticle {
-  display: none;
+	display: none;
 }
-.ui-thumbnail[data-active] > img, .ui-thumbnail:hover > img {
-  filter: grayscale(0%);
+
+.ui-thumbnail[data-active]>img,
+.ui-thumbnail:hover>img {
+	filter: grayscale(0%);
 }
+
 .ui-thumbnail[data-active] .ui-cuticle {
-  display: block;
+	display: block;
 }
 
 
