--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -806,7 +806,7 @@ img {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #ffffff;
+	background-color: #d4a12d;
 	opacity: 1;
 	transition-duration: 0.35s;
 	z-index: 1;
