--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -608,12 +608,12 @@ header nav li {
 }
 
 #cnt {
-	box-shadow: 0px 5px 0 #3ee7d6;
+	border-bottom: 4px solid #3ee7d6;
 	color: #222;
 }
 
 #srv {
-	box-shadow: 0px 5px 0 #ebebeb;
+	border-bottom: 4px solid #ebebeb;
 	color: #222;
 }
 
