--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -932,17 +932,33 @@ img {
 }
 
 .contact-input {
-	flex-basis: 50%;
+
 	padding: 3.5rem;
 }
 
-.contact-details {
-	flex-basis: 100%;
+.contact-budget {
+	flex-basis: 60%;
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.contact-budget div {
+	flex-basis: 50%;
+}
+
+.contact-budget label,
+.contact-budget input {
+	flex-basis: 20%;
+}
+.contact-details {
+	flex-basis: 60%;
+	display: flex;
+	justify-content: center;
 }
 
 .contact-details div {
-	flex-basis: 60%;
+	flex-basis: 50%;
 }
 
 .contact-details label,
@@ -1058,7 +1074,7 @@ img {
 .contact-form button:hover {
 	background: #3ee7d6;
 	color: white;
-	transform: scale(1.2);
+	transform: scale(1.1);
 	transition-duration: 100ms;
 }
 
